# educado-docs

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  parse_changelog.py  parse_files.py  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  docs.md  feature_request.md  issue-template.md
.github/workflows/: ci.yml  release.yml
backlog/: index.html
database/database_index/: index.html
deliverables/deliverables_index/: index.html
development/lifecycle/: index.html
development/tools/: index.html
docs/: index.md  lessons.md  references.md  wiki_index.md
docs/backlog/: index.md
docs/database/: database_index.md
docs/deliverables/: deliverables_index.md
docs/development/: lifecycle.md  tools.md
docs/management/: deliverables.md  issue-tracking.md  lessons-learned.md  roadmap.md  workflow.md
docs/mobile/: upgrade-expo54.md
docs/product/: mvp.md  overview.md
docs/project/: objectives.md  overview.md  stakeholders.md  vision.md
docs/setup/: readme.md
management/deliverables/: index.html
management/issue-tracking/: index.html
management/lessons-learned/: index.html
management/roadmap/: index.html
management/workflow/: index.html
product/mvp/: index.html
product/overview/: index.html
project/objectives/: index.html
project/overview/: index.html
project/stakeholders/: index.html
project/vision/: index.html
references/: index.html
search/: search_index.json
setup/mkdocs-configuration/: index.html
wiki_index/: index.html
(+195 files in other folders)
