[project]
name = "educado-docs"
version = "2.5.1"
description = "Official documentation for the Educado project"
readme = "README.md"
authors = [
    { name = "Martin Kedmenec <70742985+audio-engineer@users.noreply.github.com>" },
    { name = "LucasGSAntunes <190091681@aluno.unb.br>" }
]
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocs-minify-plugin>=0.8.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pylint>=3.3.9",
    "ruff>=0.13.3",
]

[tool.isort]
profile = "black"

[tool.mypy]
files = "**/*.py"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
